kubernetes-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-hello-svc
spec:
  type: NodePort
  selector:
    app: spring-hello
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
